<resources>
    <string name="app_name">Arcade</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="oops">Oops…</string>
    <string name="are_you_sure">Are you sure?</string>

    <!--Login Related-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating</string>
    <string name="loading_data">Loading data</string>
    <string name="login_invalid_email">Invalid email address.</string>
    <string name="login_invalid_password">Password should be greater than 5 characters.</string>

    <!--first time-->
    <string name="first_time_setup">First Time Setup</string>
    <string name="child">Child</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="alien">Alien</string>
    <string name="robot">Robot</string>
    <string name="other">Other</string>
    <string name="first_time_welcome">Welcome to Arcade!\nTell us about yourself.</string>
    <string name="first_time_icon">What are you?</string>
    <string name="first_time_name">What should we call you?</string>
    <string name="first_time_select_profile">Select profile icon</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="first_time_name_error">Name can not be empty!</string>

    <!--game lobby-->
    <string name="game_lobby">Game Lobby</string>
    <string name="proxy_warning">Unfortunately, our platform does not support proxy networks (yet). Please try again by connecting some non-proxy internet service. </string>
    <string name="searching_games">Searching for game…</string>
    <string name="no_games_found">No game found.\nYou can create new one or swipe down to refresh!</string>

    <string name="dashboard">Dashboard</string>
    <string name="select_profile_icon">Select Profile Icon</string>
    <string name="log_out">Log out</string>
    <string name="change_pass">Change Password</string>
    <string name="change_pass_message">Change password link will be sent to your email address \'%s\'. Do you want to continue?</string>
    <string name="log_out_message">You are about to log out of your account. You will not able to play multiplayer game.
        Are you sure you want to log out?</string>


    <string name="create_game">Create Game</string>
    <string name="learn_game">Learn Game</string>
    <string name="available_games">Currently available game</string>
    <string name="please_wait">Please wait…</string>
    <string name="table_id">Table ID %s</string>

    <string name="battleship">Battleship</string>
    <string name="battleship_details">This is classical guessing game for two players.</string>
    <string name="battleship_url">"https://en.wikipedia.org/wiki/Battleship_(game)"</string>
</resources>
