<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/game_details_icon"
            android:layout_width="@dimen/game_details_icon_size"
            android:layout_height="@dimen/game_details_icon_size"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/battleship" />

        <TextView
            android:id="@+id/game_details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/battleship"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/game_details_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_details_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="@string/battleship_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/game_details_icon"
            app:layout_constraintTop_toBottomOf="@+id/game_details_title" />

        <Button
            android:id="@+id/game_details_create_game"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_details_details" />

        <Button
            android:id="@+id/game_details_learn_game"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/learn_game"
            app:layout_constraintBottom_toBottomOf="@+id/game_details_create_game"
            app:layout_constraintEnd_toStartOf="@+id/game_details_create_game"
            app:layout_constraintTop_toTopOf="@+id/game_details_create_game" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>